fix forum edit link; add enable/disable forum links

--- a/fofou.css
+++ b/fofou.css
@@ -11,7 +11,7 @@ body {
 	color:				black;
 	padding:			0; /* needed for Opera */
 	font-family:		Tahoma,Arial,Helvetica,sans-serif;    
-	font-size:			12px;
+	/*font-size:			12px;*/
 	margin-left:		1em;
 	margin-top:			1em;
 	margin-right:		1em;	
