added log in/log out links in some forms

--- a/fofou.css
+++ b/fofou.css
@@ -23,6 +23,10 @@ a:visited {	color: purple; }
 /* To hide things from IE */
 .noIE { _display: none; }
 
+#tbTop {
+	text-align:right;
+}
+
 /*******************************************************************************
  * Header, footer, and body table
  ******************************************************************************/
