--- a/static/default.css
+++ b/static/default.css
@@ -10,11 +10,11 @@ body {
 	background-color:	white;
 	color:				black;
 	padding:			0; /* needed for Opera */
-	font-family:		Tahoma,Arial,Helvetica,sans-serif;    
+	font-family:		Tahoma,Arial,Helvetica,sans-serif;
 	font-size:			12px;
 	margin-left:		1em;
 	margin-top:			1em;
-	margin-right:		1em;	
+	margin-right:		1em;
 	margin-bottom:		0em;
 }
 
@@ -48,7 +48,7 @@ a:visited {	color: purple; }
 
 .header p {
 	color: #AAAAAA;
-	font-family: "Lucida Grande", "Lucida Sans Unicode", sans-serif;	
+	font-family: "Lucida Grande", "Lucida Sans Unicode", sans-serif;
 	font-size: 90%;
 	font-weight: bold;
 	text-align: left;
@@ -73,12 +73,12 @@ td.sidebar {
 	width: 125px;
 	vertical-align: top;
 	font-size: 10px;
-	font-family: "Lucida Grande", "Lucida Sans Unicode", sans-serif;	
+	font-family: "Lucida Grande", "Lucida Sans Unicode", sans-serif;
 	color: rgb(102, 102, 102);
 }
 
 div.footer {
-	font-family: "Lucida Grande", "Lucida Sans Unicode", sans-serif;	
+	font-family: "Lucida Grande", "Lucida Sans Unicode", sans-serif;
 	border-top: 1px solid #189337; width: 735px; font-size: 9pt; margin-top: 20px;
 	text-align: center;
 }
@@ -91,8 +91,7 @@ div.footer {
 div.form {
 	font-family:		Georgia,'Times New Roman',Times,serif;
 	font-weight:		normal;
-	margin-left:		7px; 
-	x-height:			1%;
+	margin-left:		7px;
 }
 
 table.form .buttons input {
@@ -177,7 +176,6 @@ div.topics {
 	font-family:		Georgia,'Times New Roman',Times,serif;
 	font-weight:		normal;
 	margin-left:		7px;
-	x-height:			1%;
 }
 
 div.topic {
@@ -211,7 +209,7 @@ div.topics .date {
 div.posts {
 	font-family:		Georgia,'Times New Roman',Times,serif;
 	font-weight:		normal;
-	margin-left:		7px; 
+	margin-left:		7px;
 }
 
 div.posts div.post {
@@ -280,7 +278,7 @@ div.buttons a {
 	background-color:	#DDD;
 	color:				rgb(0,0,180);
 	padding:			2px 4px;
-	margin-top:			0ex;	
+	margin-top:			0ex;
 	margin-bottom:		0ex;
 	margin-right:		1ex;
 	margin-left:		0ex;
@@ -295,16 +293,16 @@ div.buttons a img { vertical-align: text-top; }
 
 div.searchBox {
 	float:				right;
-	margin-left:		7px; 
+	margin-left:		7px;
 	font-size:			11px;
 	font-weight:		bold;
-	text-decoration:	none; 
-	//background-color:	#189337; 
-	//color:				#FFFFFF; 
+	text-decoration:	none;
+	/*background-color:	#189337;*/
+	/*color:				#FFFFFF;*/
 	font-family:		Tahoma,Arial,Helvetica,sans-serif;
 	padding:			3px 1px 2px 5px;
-	//border-right:		1px solid #0F5675;
-	//border-bottom:		1px solid #0F5675;
+	/*border-right:		1px solid #0F5675;*/
+	/*border-bottom:		1px solid #0F5675;*/
 }
 
 div.searchBox input.button {
@@ -318,7 +316,7 @@ div.searchBox input.button {
 	background-color:	#CCCCCC;
 	padding:			2px 2px;
 	width:				30px;
-	margin-left:		4px; 
+	margin-left:		4px;
 }
 
 #tbTop {
@@ -330,3 +328,15 @@ div.manageforumsmsg {
   text-align: center;
 }
 
+.msg {
+	padding-top: 16px;
+	padding-bottom: 16px;
+	margin-bottom: 16px;
+	padding-left: 32px;
+	padding-right: 32px;
+	width: 720px;
+	font-size: 16px;
+	font-weight: bold;
+	color: black;
+	background-color:#ffdbdb;
+}
